build: remove nodemon dependency

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "./src/server.js",
   "scripts": {
     "start": "node ./src/server.js",
-    "dev": "nodemon ./src/server.js",
+    "dev": "node --watch ./src/server.js",
     "migrate": "knex migrate:latest"
   },
   "keywords": [],
@@ -21,8 +21,5 @@
     "jsonwebtoken": "^9.0.2",
     "knex": "^3.0.1",
     "sqlite3": "^5.1.6"
-  },
-  "devDependencies": {
-    "nodemon": "^3.0.1"
   }
 }
