--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "",
   "main": "./src/server.js",
   "scripts": {
-    "start": "node ./src/server.js",
     "dev": "node --watch ./src/server.js",
-    "migrate": "knex migrate:latest"
+    "migrate": "knex migrate:latest",
+    "server": "knex migrate:latest && node --watch ./src/server.js"
   },
   "keywords": [],
   "author": "",
